posiGen_FullsendBox/src/objects/Login_access__c.object
<CustomObject>
    <fields>
        <fullName>EndPointUrl__c</fullName>
        <label>EndPointUrl</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>security_token__c</fullName>
        <label>security token</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Login access</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Login access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logins access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>